Fixed a layout problem by adding a clear to the footer style.

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -130,6 +130,7 @@ h1 {
 	color: #333;
 	text-align: center;
 	padding: 8px;
+	clear: both;
 }
 
 /* @group Form Errors */
